Remove FS/S3 perisistence related properties